--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@stitches/react": "1.2.8",
+    "@types/styled-components": "^5.1.26",
     "framer-motion": "8.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
-    "smooth-scrollbar": "^8.8.1"
+    "smooth-scrollbar": "^8.8.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "18.0.27",
